@@ -1,1 +1,1 @@
-__version__ = '1.2.2.dev1'
+__version__ = '1.2.2.dev2'
